// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagram basic 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledStack__StyledStackLayer-jgYgfC NdcUi"
    >
      <div
        class="StyledBox-bStriS djbAkW"
      >
        <div
          class="StyledBox-bStriS jGhOhz"
          id="1"
        />
        <div
          class="StyledBox-bStriS jGhOhz"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-jgYgfC kuRNII"
    >
      <svg
        class="StyledDiagram-fAdbMP bwxUiT"
        height="0"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
        width="0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram color 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledStack__StyledStackLayer-jgYgfC NdcUi"
    >
      <div
        class="StyledBox-bStriS djbAkW"
      >
        <div
          class="StyledBox-bStriS jGhOhz"
          id="1"
        />
        <div
          class="StyledBox-bStriS jGhOhz"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-jgYgfC kuRNII"
    >
      <svg
        class="StyledDiagram-fAdbMP bwxUiT"
        height="0"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
        width="0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#865CD6"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram offset 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledStack__StyledStackLayer-jgYgfC NdcUi"
    >
      <div
        class="StyledBox-bStriS djbAkW"
      >
        <div
          class="StyledBox-bStriS jGhOhz"
          id="1"
        />
        <div
          class="StyledBox-bStriS jGhOhz"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-jgYgfC kuRNII"
    >
      <svg
        class="StyledDiagram-fAdbMP bwxUiT"
        height="0"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
        width="0"
      >
        <g>
          <path
            d="M 6,6 Q 6,6 6,6 T 6,6"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 12,12 Q 12,12 12,12 T 12,12"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 24,24 Q 24,24 24,24 T 24,24"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram thickness renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledStack__StyledStackLayer-jgYgfC NdcUi"
    >
      <div
        class="StyledBox-bStriS djbAkW"
      >
        <div
          class="StyledBox-bStriS jGhOhz"
          id="1"
        />
        <div
          class="StyledBox-bStriS jGhOhz"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-jgYgfC kuRNII"
    >
      <svg
        class="StyledDiagram-fAdbMP bwxUiT"
        height="0"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
        width="0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="6"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="12"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="24"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram type 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledStack-jqCQsC ewABiA"
  >
    <div
      class="StyledStack__StyledStackLayer-jgYgfC NdcUi"
    >
      <div
        class="StyledBox-bStriS djbAkW"
      >
        <div
          class="StyledBox-bStriS jGhOhz"
          id="1"
        />
        <div
          class="StyledBox-bStriS jGhOhz"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-jgYgfC kuRNII"
    >
      <svg
        class="StyledDiagram-fAdbMP bwxUiT"
        height="0"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
        width="0"
      >
        <g>
          <path
            d="M 0,0 L 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 L 0,0 L 0,0 L 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
